--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "bundle:watch": "rollup -c rollup.config.js --watch",
         "generate-types": "tsc -d",
         "examples:build": "webpack",
-        "examples:run": "http-server ./examples",
+        "examples:run": "webpack serve --progress",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "lint": "eslint ./src",
@@ -26,7 +26,6 @@
         "@typescript-eslint/eslint-plugin": "^5.13.0",
         "@typescript-eslint/parser": "^5.13.0",
         "eslint": "^8.10.0",
-        "http-server": "^14.1.0",
         "jest": "^27.5.1",
         "prettier": "^2.5.1",
         "rollup": "^2.70.1",
@@ -35,6 +34,7 @@
         "typescript": "^4.6.2",
         "webpack": "^5.70.0",
         "webpack-bundle-analyzer": "^4.5.0",
-        "webpack-cli": "^4.9.2"
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.7.4"
     }
 }
