Updated dependencies and configs

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "lint": "eslint ./src",
-        "test": "jest"
+        "prepublish": "npm run generate-types && npm run bundle"
     },
     "files": [
         "/dist",
