--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "main": "./dist/bundle.js",
     "types": "./dist/index.d.ts",
     "scripts": {
-        "bundle": "rollup -c rollup.config.js",
-        "bundle:watch": "rollup -c rollup.config.js --watch",
+        "bundle": "rollup -c rollup.config.js --bundleConfigAsCjs",
+        "bundle:watch": "rollup -c rollup.config.js --bundleConfigAsCjs --watch",
         "generate-types": "tsc -d",
         "examples:build": "webpack",
         "examples:run": "webpack serve --progress",
@@ -22,20 +22,21 @@
     "author": "Robert Corponoi",
     "license": "MIT",
     "devDependencies": {
-        "@rollup/plugin-typescript": "^8.3.2",
-        "@types/jest": "^27.4.1",
+        "@rollup/plugin-typescript": "^11.0.0",
+        "@types/jest": "^29.4.0",
         "@typescript-eslint/eslint-plugin": "^5.19.0",
         "@typescript-eslint/parser": "^5.19.0",
         "eslint": "^8.12.0",
-        "jest": "^27.5.1",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
         "prettier": "^2.6.1",
-        "rollup": "^2.70.1",
-        "ts-jest": "^27.1.4",
+        "rollup": "^3.19.1",
+        "ts-jest": "^29.0.5",
         "ts-loader": "^9.2.8",
         "typescript": "^4.6.3",
         "webpack": "^5.70.0",
         "webpack-bundle-analyzer": "^4.5.0",
-        "webpack-cli": "^4.9.2",
+        "webpack-cli": "^5.0.1",
         "webpack-dev-server": "^4.7.4"
     }
 }
