--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on: [pull_request]
 # The name of the workflow to be displayed on the repository's actions page.
 name: CI
 
-# A list of the jobs that will run during the workflow. Each job runs 
+# A list of the jobs that will run during the workflow. Each job runs
 # independently of the others and on different virtual environments.
 # We have a single job, which:
 # 1. Runs `npm install` to install the dependencies.
@@ -19,11 +19,14 @@ jobs:
             # https://github.com/actions/setup-node
             - uses: actions/setup-node@v2
               with:
-                node-version: '16.13.2'
-                check-latest: true
+                  node-version: "16.13.2"
+                  check-latest: true
             # Run `npm ci` to install dependencies.
             - name: Install dependencies
               run: npm ci
-            # Lastly create the Rollup bundle.
+            # Create the Rollup bundle.
             - name: Create the Rollup bundle
               run: npm run bundle
+            # Run the tests.
+            - name: Run tests
+              run: npm run test
