Changed bundle to build in package.json

--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
     "name": "app-template",
     "version": "0.1.0",
-    "main": "./dist/bundle.js",
+    "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "scripts": {
-        "bundle": "rollup -c rollup.config.js --bundleConfigAsCjs",
-        "bundle:watch": "rollup -c rollup.config.js --bundleConfigAsCjs --watch",
+        "build": "rollup -c rollup.config.js --bundleConfigAsCjs",
+        "build:watch": "rollup -c rollup.config.js --bundleConfigAsCjs --watch",
         "generate-types": "tsc -d",
         "examples:build": "webpack",
         "examples:run": "webpack serve --progress",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "lint": "eslint ./src",
+        "pretest": "npm run build",
         "test": "jest",
-        "prepublish": "npm run generate-types && npm run bundle"
+        "prepublish": "npm run generate-types && npm run build"
     },
     "files": [
         "/dist",
