Changed bundle script to build in workflow

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -27,7 +27,7 @@ jobs:
               run: npm ci
             # Create the Rollup bundle.
             - name: Create the Rollup bundle
-              run: npm run bundle
+              run: npm run build
             # Run the tests.
             - name: Run tests
               run: npm run test
