--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,27 @@
-/**
- * The configuration options for ESLint.
- * 
- * https://eslint.org/docs/user-guide/configuring/
- */
-/* eslint-disable no-undef */
-module.exports = {
+{
     // An environment provides predefined global variables.
     // https://eslint.org/docs/user-guide/configuring/language-options#specifying-environments
-    env: {
-        browser: true,
-        es2021: true,
+    "env": {
+        "browser": true,
+        "es2021": true
     },
     // Extends the traits of other configuration files (including rules,
     // plugins, and language options).
     // https://eslint.org/docs/user-guide/configuring/configuration-files#extending-configuration-files
-    extends: ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
     // The parser to use.
     // https://eslint.org/docs/user-guide/configuring/plugins#specifying-parser
-    parser: "@typescript-eslint/parser",
+    "parser": "@typescript-eslint/parser",
     // Specifies the language options to support.
     // https://eslint.org/docs/user-guide/configuring/language-options#specifying-parser-options
-    parserOptions: {
-        ecmaVersion: "latest",
-        sourceType: "module",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
     },
     // Third-party plugins.
     // https://eslint.org/docs/user-guide/configuring/plugins#configuring-plugins
-    plugins: ["@typescript-eslint"],
+    "plugins": ["@typescript-eslint"],
     // Changes rule settings.
     // https://eslint.org/docs/user-guide/configuring/rules
-    rules: {},
-};
+    "rules": {}
+}
